force-app/main/default/objects/Certification_Level__c/Certification_Level__c.object-meta.xml
<CustomObject>
    <description>Junction object between Annual Certifications and Certifications.</description>
    <label>Certification Level</label>
    <nameField>
        <displayFormat>CL{00000000}</displayFormat>
        <label>Certification Level ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>