force-app/main/default/objects/Certification_Level__c/fields/Annual_Certification__c.field-meta.xml
<CustomField>
    <fullName>Annual_Certification__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related annual certification record.</description>
    <inlineHelpText>Related annual certification record.</inlineHelpText>
    <label>Annual Certification</label>
    <referenceTo>Annual_Certification__c</referenceTo>
    <relationshipLabel>Certification Levels</relationshipLabel>
    <relationshipName>Required_Certifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>