force-app/main/default/objects/Certification_Level__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Select certification that is required for this tax year.</description>
    <inlineHelpText>Select certification that is required for this tax year.</inlineHelpText>
    <label>Certification</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Certification__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Search results only return certification records marked active.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Certification Levels</relationshipLabel>
    <relationshipName>Required_Certifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>