force-app/main/default/objects/Certification_Level__c/fields/Certification_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Certification_Identifier__c</fullName>
    <formula>Certification__r.Certification_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The identifier of the certification</inlineHelpText>
    <label>Certification Identifier</label>
    <type>Text</type>
</CustomField>