force-app/main/default/objects/Certification_Level__c/fields/Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>Certification_Name__c</fullName>
    <formula>Certification__r.Name</formula>
    <label>Certification Name</label>
    <type>Text</type>
</CustomField>