force-app/main/default/objects/Certification_Level__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if certification is complete.</description>
    <inlineHelpText>Check box if certification is complete.</inlineHelpText>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>