force-app/main/default/objects/Certification_Level__c/validationRules/Certification_Level_Name_Not_Editiable.validationRule-meta.xml
<ValidationRule>
    <fullName>Certification_Level_Name_Not_Editiable</fullName>
    <active>true</active>
    <description>Only system and delegated administrators can edit certification name.</description>
    <errorConditionFormula>AND(
NOT (ISNEW()),
ISCHANGED(Certification__c)
)</errorConditionFormula>
    <errorDisplayField>Certification__c</errorDisplayField>
    <errorMessage>The related certification cannot be changed to a different certification.</errorMessage>
</ValidationRule>