force-app/main/default/objects/Certification_Level__c/validationRules/State_Certifications_Require_State_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Certifications_Require_State_Value</fullName>
    <active>true</active>
    <description>State Certifications Require State Value(s)</description>
    <errorConditionFormula>AND( 
CONTAINS(Certification__r.Name, &quot;State&quot;),
 Complete__c = TRUE,
  ISBLANK(State__c)
)</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>State certification requires state selection.</errorMessage>
</ValidationRule>